# HighResTimestampInput-Godot

./: .gitignore  CMakeLists.txt  README.EN.md  README.md
include/high_res_timestamp_input/: raw_input_event.h  timestamp_input.h
src/: extension_entry.cpp  raw_input_event.cpp  register_types.cpp  register_types.h  timestamp_input.cpp
